# AI_Football_Project

./: .gitignore  README.md  pyproject.toml  requirements.txt
runs/cnn/: model.pt  prediction_log.csv
scripts/: build_manual_meta.py  build_meta_with_los.py  compute_accuracy.py  detect_players_yolo.py  edit_detections_click.py  extract_frames.py  full_label_pipeline.py  label_formation.py  label_positions_manual.py  label_positons.py  mark_los_manual.py  predict_cnn.py  realtime_play_predict.py  train_cnn.py  visualize_detections.py  yolo_predict.py  yolo_train.py
src/Football_Play_Project/cnn/: dataset.py  model.py  train_cnn.py
src/Football_Play_Project/config/: dataset.yaml  formation_schema.yaml  model_yolo.yaml  project.yaml
src/Football_Play_Project/formation/: formation_label.py  role_assign.py
src/Football_Play_Project/io/: annotations.py  video_io.py  yolo_io.py
src/Football_Play_Project/tracking/: line_of_scrimmage.py  tracker.py
src/Football_Play_Project/utils/: geometry.py  seed.py  visualize.py
src/Football_Play_Project/yolo/: infer_yolo.py  train_yolo.py
